# veridoctor-backend

./: .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  entrypoint.sh  gunicorn.conf.py  migrate_schema.py  pyproject.toml  runserver.sh  startup.sh
.github/: dependabot.yml
.github/workflows/: appointment-reminders.yml  ci.yml
appointments/: admin.py  models.py  pagination.py  serializers.py  urls.py  views.py
appointments/migrations/: 0001_initial.py  0002_appointmentcapture_form_snapshot.py  0003_providerappointment_service.py  0004_providerappointment_patient_identity.py  0005_alter_appointmentcapture_form_snapshot_and_more.py  0006_provideraappointment_actual_times.py  0007_add_price_snapshot_fields.py  0007_backfill_price_snapshot.py  0008_backfill_price_snapshot.py  (+2 more)
config/: settings.py  unfold_helpers.py  urls.py
facility/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
hmis/: admin.py  apps.py  audit.py  models.py  permissions.py  serializers.py  urls.py  views.py
hmis/migrations/: 0001_initial.py  (+2 more)
identity/: admin.py  authentication.py  emails.py  managers.py  models.py  serializers.py  urls.py  utils.py  views.py
notifications/: admin.py  models.py  push_views.py  serializers.py  services.py  signals.py  urls.py  views.py
provider/: admin.py  models.py  serializers.py  urls.py  views.py
records/: models.py  pin_models.py  pin_permissions.py  pin_views.py  serializers.py  services.py  urls.py  views.py
scheduling/: models.py
scripts/: smoke_test_hmis.py
shared/: models.py
utils/: code_generators.py
(+48 files in other folders)
