[project]
name = "veridoctor-backend"
version = "0.1.0"
description = "backend service for veridoctor"
authors = [
    {name = "Destiny Kevogo",email = "destinykevogo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "django (>=5.2.7,<6.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "django-unfold (>=0.72.0,<0.73.0)",
    "psycopg[binary,pool] (>=3.3.4,<4.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "cloudinary (>=1.45.0,<2.0.0)",
    "whitenoise (>=6.12.0,<7.0.0)",
    "pywebpush (>=2.3.0,<3.0.0)"
]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry]
package-mode = false
